test/error/iface/err2.rzy

Sub = Composition
  inp : slot();
  out : signal();
    
  inp -> out;
end

Err2 = Composition
  inp : slot();
  out : signal();

  a : Sub;
    
  inp -> a.inp;   // prevent error throwing
  a.out -> out;   // prevent error throwing
  
  a.inp -> out;   // ERROR connect sub-input to output
end

